--- a/AIoT/templates/AIoT/detail.html
+++ b/AIoT/templates/AIoT/detail.html
@@ -88,8 +88,8 @@ color: black;
   border: 2px solid blue;
 }
 .ill_table th {
-  background-color: yellow;
-  border: 2px solid orange;
+  background-color: lightgreen;
+  border: 2px solid forestgreen;
 }
 .tick line{
     opacity: 0.3;
@@ -114,7 +114,7 @@ color: black;
 #picture {
   float: left;
   /*display: block;*/
-  border: 3px solid black;
+  /*border: 3px solid black;*/
   /*background-color: black;*/
   /*position: absolute;*/
   /*clear: left;*/
@@ -146,7 +146,7 @@ p.tabs
   p.tabs a
   {
     display: block;
-    width: 5em;
+    width: 8em;
     float: left;
     margin: 0px 3px 0px 0px;
     padding: 8px;
@@ -170,12 +170,18 @@ p.tabs
   }
   #temperature_tab {
     background-color: red;
+    font-size: 18px;
+    font-weight: bold;
   }
   #moisture_tab {
     background-color: blue;
+    font-size: 18px;
+    font-weight: bold;
   }
   #illuminance_tab {
-    background-color: yellow;
+    background-color: forestgreen;
+    font-size: 18px;
+    font-weight: bold;
   }
   #memo_write_button {
     font-size: 1.4em;
@@ -225,7 +231,7 @@ $(function() {
     <div class="right" y="30"></div></div><br>
     <div id="content_area">
     <svg id="picture">
-    <image id="zu1" x="0" y="0" width="100%" height="100%" opacity="1"></image>
+    <image id="zu1" x="0" y="0" width="320px" height="240px" opacity="1"></image>
     </svg>
     <div id="graph_area">
     <div class="tabbox" id="tabbox"></div>
@@ -342,7 +348,7 @@ function make_linegraph(target) {
         var yScale = d3.scale.linear().domain([0,ill_axis]).range([height, 0]);
         var yAxis = d3.svg.axis().scale(yScale).orient("left").ticks(10).innerTickSize(-width).outerTickSize(2).tickPadding(8);
         var line = d3.svg.line().x(function(d) { return xScale(d.datetime)}).y(function(d) { return yScale(d.illuminance)});
-        var line_color = "yellow";
+        var line_color = "forestgreen";
       }
       document.getElementById("line_graph").style.borderColor = line_color;
 
@@ -557,25 +563,15 @@ function make_link() {
   var prev_we = moment(dt).subtract(1,"week").format("YYYYMMDD");
   var next_we = moment(dt).add(1,"week").format("YYYYMMDD");
   d3.select(".right").append("a").attr({
-    "id": "prev_day",
-    "class": "btn btn-info btn-sm",
-    "href": "{% url 'AIoT:detail' %}" + "?datetime=" + prev_dt,
-  }).text("< 前日");
-  d3.select(".right").append("a").attr({
-    "id": "prev_week",
-    "class": "btn btn-success btn-sm",
-    "href": "{% url 'AIoT:detail' %}" + "?datetime=" + prev_we,
-  }).text("< 前週");
-  d3.select(".right").append("a").attr({
     "id": "back_main",
     "class": "btn btn-default btn-sm",
     "href": "{% url 'AIoT:datalist' %}",
   }).text("メインページ");
   d3.select(".right").append("a").attr({
-    "id": "next_week",
-    "class": "btn btn-success btn-sm",
-    "href": "{% url 'AIoT:detail' %}" + "?datetime=" + next_we,
-  }).text("翌週 >");
+    "id": "prev_day",
+    "class": "btn btn-info btn-sm",
+    "href": "{% url 'AIoT:detail' %}" + "?datetime=" + prev_dt,
+  }).text("< 前日");
   d3.select(".right").append("a").attr({
     "id": "next_day",
     "class": "btn btn-info btn-sm",
