--- a/AIoT/templates/AIoT/datalist.html
+++ b/AIoT/templates/AIoT/datalist.html
@@ -424,7 +424,7 @@ request.open('POST', 'https://api.repl-ai.jp/v1/dialogue', true);
 request.setRequestHeader("Content-Type", "application/json");
 request.setRequestHeader("x-api-key", "utzD4E0CtN3Vw6lauIXS04JpvyGxoBrk9xUoOHiQ");
 request.onload = function (e) {
-  if( request.status == 200){
+  if(request.status == 200){
     //console.log(request.responseText);
     var res = JSON.parse(request.responseText);
     var res1 = res["systemText"];
@@ -442,7 +442,7 @@ var body = {
 request.send(JSON.stringify(body));
 
 //API発話
-function callAPI(hatsuwa){
+function callAPI(hatsuwa,RequestZatsudan){
   var request = new XMLHttpRequest();
   request.open('POST', 'https://api.repl-ai.jp/v1/dialogue', true);
   request.setRequestHeader("Content-Type", "application/json");
@@ -452,8 +452,12 @@ function callAPI(hatsuwa){
       //console.log(request.responseText);
       var res = JSON.parse(request.responseText);
       var res1 = res["systemText"];
+      if(res1["expression"] == "NOMATCH"){
+        callBot(RequestZatsudan);
+      }else{
       console.log(res1["expression"]);
       OnseiGousei(res1["utterance"]);
+      }
     }
   };
   var body1 = {
@@ -544,7 +548,7 @@ function tbox2(value){
 
   //callBot(apiJson3);
 
-  callAPI(str1);
+  callAPI(str1,apiJson3);
 }
 //履歴を保存する変数
 var tmp_text = "";
